styles/main.css
/* CSS - Handles Layout */

body {
  min-width: 900px;
}

#center {
  padding-left: 200px;
  padding-right: 190px;
}

#center .column {
  position: relative;
  float: left;
}

#center-format {
  padding: 10px 20px;
  width: 100%;
}

#left {
  width: 180px;
  padding: 0 13px;
  right: 240px;
  margin-left: -100%;
}

#right {
  width: 130px;
  padding: 0 13px;
  margin-right: -100%;
}

#footer {
  clear: both;
}

/* Make the columns the same height as each other */
#container {
  overflow: hidden;
}

#container .column {
  padding-bottom: 1001em;
  margin-bottom: -1000em;
}

/* Aesthetics */
body {
  margin: 0;
  padding: 0;
  font-family:Sans-serif;
  line-height: 1.5em;
}

p {
  color: #555;
}

nav dt a {
  color: darkgreen;
  text-decoration: none;
}

nav dd {
  color: darkgreen;
  text-decoration: none;
  font-size: small;
}

#header, #footer {
  font-size: large;
  padding: 0.3em;
  background: #BCCE98;
}

header img{
  width: 100%;
  height: 20%;
  vertical-align: baseline;
  border: 1px solid #666;
  background: #999;
  position: relative; top: 0; left: 0;
}

header div{
  position: relative;
  left: 0;
  top: 0;
}

.logo{
  border-radius: 50%;
  width: 12%;
  height: 30%;
  vertical-align: baseline;
  border: 1px solid #666;
  background: #999;
  position: absolute;
  top: 265px;
  left: 100px;
}

.social-thumbnail{
  height: 40px;
  width: 40px;
  object-fit: contain
  }


#left {
  background: #DAE9BC;
}

#right {
  background: #F7FDEB;
}

#center {
  background: #fff;
}

#container .column {
  padding-top: 1em;
}

